Solved problem of scroll bar in modal panels, added overflow-y: hidden to the modal element

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -80,6 +80,10 @@ div#preload {
   font-size: 1em;
 }
 
+.modal{
+  overflow-y: hidden !important; 
+}
+
 
 /*
  * Buttons
